--- a/src/management_system/templates/management_system/single_item.html
+++ b/src/management_system/templates/management_system/single_item.html
@@ -3,8 +3,8 @@
 
 {% block content %}
 
-        <h1>{{item.item_name}} </h1>
-        <b>IT: </b>{{item.item_it|default_if_none:""}}<br>
+        <h1>Informacje o sprzęcie </h1>
+        {% comment %} <b>IT: </b>{{item.item_it|default_if_none:""}}<br>
         <b>S/N: </b>{{item.item_sn|default_if_none:""}}<br>
         <b>Aktualny właściciel:</b>{{item.item_user|default_if_none:" brak"}}
           <br>
@@ -12,22 +12,67 @@
           <a class="btn btn-primary" href="{%url 'singleEmployee' item.item_user.id%}"role="button">Wyświetl pracownika</a>
             <br>
           {%endif%}
-        <br>
+        <br> {% endcomment %}
 
-        <div class="card w-100" >
-                <ul class="list-group list-group-flush">
+        <ul id="myTab" role="tablist" class="nav nav-tabs nav-pills flex-column flex-sm-row text-center bg-light border-0 rounded-nav">
+          <li class="nav-item flex-sm-fill">
+            <a id="home-tab" data-toggle="tab" href="#home" role="tab" aria-controls="home" aria-selected="true" class="nav-link border-0 text-uppercase font-weight-bold active">Informacje</a>
+          </li>
+          <li class="nav-item flex-sm-fill">
+            <a id="profile-tab" data-toggle="tab" href="#profile" role="tab" aria-controls="profile" aria-selected="false" class="nav-link border-0 text-uppercase font-weight-bold">Historia przekazań</a>
+          </li>
+      
+        </ul>
+        <div id="myTabContent" class="tab-content">
+          <div id="home" role="tabpanel" aria-labelledby="home-tab" class="tab-pane fade px-4 py-5 show active">
+          
+            <ul class="list-group list-group-flush">
+              <li class="list-group-item"><b>Kategoria:</b> {{item.category}}</li>
+              <li class="list-group-item"><b>Producent:</b> {{item.item_producent}}</li>
+              <li class="list-group-item"><b>Model:</b> {{item.item_model}}</li>
+              <li class="list-group-item"><b>Numer S/N:</b> {{item.item_sn}}</li>
+              <li class="list-group-item"><b>Numer IT:</b> {{item.item_it}}</li>
+              {%if item.item_user.id%}
+              <li class="list-group-item"><b>Posiadacz:</b> <a  href="{%url 'singleEmployee' item.item_user.id%}"role="button">{{item.item_user}} </a> </li>
+              {%endif%}
+            </ul>
+      
+      
+          </div>
+          <div id="profile" role="tabpanel" aria-labelledby="profile-tab" class="tab-pane fade px-4 py-5">
             
-                  {% for protocol in protocolList %}
-                    <a class="link-offset-2 link-offset-3-hover link-underline link-underline-opacity-0 " href="{% url 'singleProtocol' protocol.protocol_id.id%}">
-                    <li class="list-group-item">{{protocol.protocol_id.barcode}} | {{protocol.protocol_id.employee}} | {{protocol.protocol_id.created}} | {{protocol.protocol_id.is_return|yesno:"Zwrot,Przekazanie"}}</li>
-                    </a>
-                  
-                  
-                  {%endfor%}  
-            
-                </ul>
+            <div class="card w-100" >
+              <ul class="list-group list-group-flush">
+          
+                {% for protocol in protocolList %}
+                  <a class="link-offset-2 link-offset-3-hover link-underline link-underline-opacity-0 " href="{% url 'singleProtocol' protocol.protocol_id.id%}">
+                  <li class="list-group-item">{{protocol.protocol_id.barcode}} | {{protocol.protocol_id.employee}} | {{protocol.protocol_id.created|date:"d/m/Y"}} | {{protocol.protocol_id.is_return|yesno:"Zwrot,Przekazanie"}}</li>
+                  </a>
+                
+                
+                {%endfor%}  
+          
+              </ul>
+            </div>
+
+      
+      
+          </div>
+      
         </div>
 
 
- 
+
+        <script>
+          $(document).ready(function() {
+            // Activate the first tab
+            $('#myTab a:first').tab('show');
+            
+            // Handle tab click event
+            $('#myTab a').on('click', function(event) {
+              event.preventDefault();
+              $(this).tab('show');
+            });
+          });
+        </script>
 {% endblock content %}
