--- a/src/management_system/templates/management_system/single_protocol.html
+++ b/src/management_system/templates/management_system/single_protocol.html
@@ -71,7 +71,19 @@
 
     </div>
     <div id="profile" role="tabpanel" aria-labelledby="profile-tab" class="tab-pane fade px-4 py-5">
-      INFOMACJE
+      
+      <ul class="list-group list-group-flush">
+        <li class="list-group-item"><b>Barcode:</b> {{protocol.barcode}}</li>
+        <li class="list-group-item"><b>Osoba odbierająca:</b> {{protocol.employee}}</li>
+        <li class="list-group-item"><b>Osoba przekazująca:</b> {{protocol.created_by.first_name}} {{protocol.created_by.last_name}}</li>
+        <li class="list-group-item"><b>Data przekazania:</b> {{protocol.created|date:"d.m.Y"}}</li>
+        <li class="list-group-item"><b>Typ:</b> {{protocol.is_return|yesno:"Zwrot,Przekazanie"}}</li>
+        <li class="list-group-item"><b>Lokalizacja:</b> {{protocol.employee.user_location}}</li>
+        <li class="list-group-item"><b>Dział:</b> {{protocol.employee.user_department}}</li>
+        <li class="list-group-item"><b>Wydrukowany:</b> TAK/NIE......TBA</li>
+      </ul>
+
+
     </div>
 
   </div>
