--- a/src/management_system/templates/management_system/items.html
+++ b/src/management_system/templates/management_system/items.html
@@ -46,8 +46,8 @@
           <td class="align-middle">
             <span>{{item.item_kk|default_if_none:""}}</span>
           </td>
-          <td class="align-middle">
-            <span>{{item.item_user|default_if_none:""}}</span>
+          <td class="align-middle"> 
+            <a  class="link-offset-2 link-offset-3-hover link-underline link-underline-opacity-0 link-underline-opacity-75-hover" href="{%url 'singleEmployee' item.item_user.id%}"role="button"><span>{{item.item_user|default_if_none:""}}</span></a>
           </td>
           
         <td class="align-middle">
