--- a/src/management_system/templates/management_system/return_items.html
+++ b/src/management_system/templates/management_system/return_items.html
@@ -7,11 +7,31 @@
 <h1>Zdanie sprzętu dla {{employee}}</h1>
 
 
-{% for item in dataList %}
-  {{item}}
-  <br>
-{% endfor %}
 
+
+<table class="table">
+  <thead>
+    <tr>
+      <th scope="col">#</th>
+      <th scope="col">Typ</th>
+      <th scope="col">Model</th>
+      <th scope="col">IT</th>
+      <th scope="col">S/N</th>
+    </tr>
+  </thead>
+  <tbody>
+    {% for item in dataList %}
+    <tr>
+      <th scope="row">{{item.id}}</th>
+      <td>{{item.category}}</td>
+      <td>{{item.item_model}}</td>
+      <td>{{item.item_it}}</td>
+      <td>{{item.item_sn}}</td>
+    </tr>
+    {% endfor %}
+
+  </tbody>
+</table>
 
 <form method="POST" enctype="multipart/form-data">
   {% csrf_token %}
