--- a/src/management_system/templates/management_system/new_protocol_next_item.html
+++ b/src/management_system/templates/management_system/new_protocol_next_item.html
@@ -26,6 +26,7 @@
 
     <button type="submit" class="btn btn-primary mt-3" name="saveAndEnd">Zapisz</button>
     <button type="submit" class="btn btn-secondary mt-3" name="saveAndContinue">Dodaj Kolejny</button>
+    <a class="btn btn-success mt-3" href="{% url 'singleProtocol' pk %}" role="button">Anuluj</a>
 </form>
 
 {% endblock content %}
