Item model update function

--- a/src/management_system/templates/management_system/single_employee_items.html
+++ b/src/management_system/templates/management_system/single_employee_items.html
@@ -83,6 +83,7 @@
       <thead>
         <tr>
           <th scope="col">Typ</th>
+          <th scope="col">Producent</th>
           <th scope="col">Model</th>
           <th scope="col">IT</th>
           <th scope="col">S/N</th>
@@ -96,6 +97,9 @@
         <tr class="fw-normal">
           <td>
             <span>{{item.category}}</span>
+          </td>
+          <td>
+            <span>{{item.item_producent}}</span>
           </td>
           <td class="align-middle">
             <span>{{item.item_model}}</span>
