--- a/src/management_system/templates/management_system/items.html
+++ b/src/management_system/templates/management_system/items.html
@@ -18,6 +18,7 @@
     <thead>
       <tr>
         <th scope="col">Typ</th>
+        <th scope="col">Producent</th>
         <th scope="col">Model</th>
         <th scope="col">IT</th>
         <th scope="col">S/N</th>
@@ -33,6 +34,9 @@
       <tr class="fw-normal">
         <td>
           <span>{{item.category}}</span>
+        </td>
+        <td>
+          <span>{{item.item_producent}}</span>
         </td>
         <td class="align-middle">
           <span>{{item.item_model}}</span>
@@ -54,6 +58,7 @@
           
         <td class="align-middle">
             <a class="btn btn-success mb-1" href="{% url 'singleItem' item.id %}" role="button">Wyświetl</a>
+            <a class="btn btn-info mb-1" href="{% url 'itemsEdit' item.id%}" role="button">Edycja</a>
           {% comment %} <a href="#!" data-mdb-toggle="tooltip" title="Remove"><i
               class="fas fa-trash-alt text-danger"></i></a> {% endcomment %}
         </td>
