--- a/src/management_system/templates/management_system/return_items.html
+++ b/src/management_system/templates/management_system/return_items.html
@@ -14,6 +14,7 @@
     <tr>
       <th scope="col">#</th>
       <th scope="col">Typ</th>
+      <th scope="col">Producent</th>
       <th scope="col">Model</th>
       <th scope="col">IT</th>
       <th scope="col">S/N</th>
@@ -24,6 +25,7 @@
     <tr>
       <th scope="row">{{item.id}}</th>
       <td>{{item.category}}</td>
+      <td>{{item.item_producent}}</td>
       <td>{{item.item_model}}</td>
       <td>{{item.item_it}}</td>
       <td>{{item.item_sn}}</td>
