--- a/src/management_system/templates/management_system/single_protocol.html
+++ b/src/management_system/templates/management_system/single_protocol.html
@@ -32,6 +32,7 @@
         <thead>
           <tr>
             <th scope="col">Typ</th>
+            <th scope="col">Producent</th>
             <th scope="col">Model</th>
             <th scope="col">IT</th>
             <th scope="col">S/N</th>
@@ -46,6 +47,9 @@
           <tr class="fw-normal">
             <td>
               <span>{{item.item_id.category}}</span>
+            </td>            
+            <td>
+              <span>{{item.item_id.item_producent}}</span>
             </td>
             <td class="align-middle">
               <span>{{item.item_id.item_model}}</span>
