--- a/src/management_system/templates/management_system/protocols.html
+++ b/src/management_system/templates/management_system/protocols.html
@@ -9,7 +9,7 @@
   <form action="{% url 'protocollist' %}" method="get">
     <input name="qname" type="text" placeholder="Imię..." value='{{qname_value}}'>
     <input name="qsurname" type="text" placeholder="Nazwisko..." value='{{qsurname_value}}'>
-    <input name="qdate" type="text" placeholder="Data: dd.mm.yyyy" value='{{qdate_value}}'>
+    <input name="qdate" type="text" placeholder="Data: dd.mm.yyyy" pattern="((3[0-1])|([1-2][0-9])|(0[1-9]))\.((0[1-9])|(1[0-2]))\.[1-9][0-9]{3}" value='{{qdate_value}}'>
     <input type='submit' value='Szukaj'>
 
   </form>
@@ -17,18 +17,28 @@
 
 
 
-  <div class="card w-100" >
-    <ul class="list-group list-group-flush">
+  <div class="col py-3" >
+    <table class="table mb-0">
+      <tr>
+        <th scope="col">Kod</th>
+        <th scope="col">Pracownik</th>
+        <th scope="col">Data</th>
+        <th scope="col">Typ</th>
+        <th scope="col"></th>
+      </tr>
 
       {% for protocol in protocolList %}
-        <a class="link-offset-2 link-offset-3-hover link-underline link-underline-opacity-0 " href="{% url 'singleProtocol' protocol.id%}">
-        <li class="list-group-item">{{protocol.id}} | {{protocol.employee}} | {{protocol.created|date:"d/m/Y"}} | {{protocol.is_return|yesno:"Zwrot,Przekazanie"}}</li>
-        </a>
-      
+        <tr class="fw-normal">
+          <td>{{protocol.barcode}}</td>
+          <td>{{protocol.employee}}</td>
+          <td>{{protocol.created|date:"d/m/Y"}}</td>
+          <td>{{protocol.is_return|yesno:"Zwrot,Przekazanie"}}</td>
+          <td><a class="btn btn-success mb-1" role="button" href="{% url 'singleProtocol' protocol.id %}">Wyswietl</a></td>
+        </tr>
       
       {%endfor%}  
 
-    </ul>
+    </table>
   </div>
 
   <div class="container p-4">
