Show printed_count

--- a/src/management_system/templates/management_system/single_protocol.html
+++ b/src/management_system/templates/management_system/single_protocol.html
@@ -91,6 +91,7 @@
         <li class="list-group-item"><b>Lokalizacja:</b> {{protocol.employee.user_location}}</li>
         <li class="list-group-item"><b>Dział:</b> {{protocol.employee.user_department}}</li>
         <li class="list-group-item"><b>Skan:</b> {{protocol.is_scanned|yesno:"TAK,NIE"}}</li>
+        <li class="list-group-item"><b>Druk:</b> {{protocol.printed_count}}</li>
         <li class="list-group-item"><b>Opis:</b> {{protocol.description|default_if_none:"--"}}</li>
       </ul>
 
