feat: utilization page, model and form

--- a/src/templates/sidebar.html
+++ b/src/templates/sidebar.html
@@ -38,9 +38,14 @@
                     <li>
                         <a href="{% url 'itemsView' %}" class="nav-link px-0 align-middle">
                             <i class="fs-4 bi-people"></i> <span class="ms-1 d-none d-sm-inline">Sprzęt</span> </a>
-                    </li>                    <li>
+                    </li>                    
+                    <li>
                         <a href="{% url 'itemsAddNew' %}" class="nav-link px-0 align-middle">
                             <i class="fs-4 bi-people"></i> <span class="ms-1 d-none d-sm-inline">Dodaj nowy sprzęt</span> </a>
+                    </li>                   
+                    <li>
+                        <a href="{% url 'utilization' %}" class="nav-link px-0 align-middle">
+                            <i class="fs-4 bi-people"></i> <span class="ms-1 d-none d-sm-inline">Utylizacja</span> </a>
                     </li>
                 </ul>
                 <hr>
