--- a/src/management_system/templates/management_system/utilization.html
+++ b/src/management_system/templates/management_system/utilization.html
@@ -4,6 +4,8 @@
 {% block content %}
 
 
-<h1>Utylizacja</h1>
+<h2>Utylizacja</h2>
+<hr />
+<!-- TODO: maybe move to nav -->
 <a class="btn btn-danger me-2" href="{% url 'utilizationAddItem'  %}" role="button">Zutylizuj sprzęt</a>
 {% endblock content %}
