--- a/src/management_system/templates/management_system/utilization.html
+++ b/src/management_system/templates/management_system/utilization.html
@@ -28,12 +28,12 @@
       {% for utilization in utilizationList %}
         <tr class="fw-normal">
           <td style="width: 1em;">
-            {% if utilization.company_transfer_date %}
-              <font color="green">
+            {% if utilization.company_transfer_date %} <!-- TODO: Latin chars!!! -->
+              <font color="green" data-bs-toggle="tooltip" data-bs-placement="top" title="Sprzet zostal przekazany do utylizacji">
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-check" viewBox="0 0 16 16"><path d="M10.97 4.97a.75.75 0 0 1 1.07 1.05l-3.99 4.99a.75.75 0 0 1-1.08.02L4.324 8.384a.75.75 0 1 1 1.06-1.06l2.094 2.093 3.473-4.425z"/></svg>
               </font>
             {% else %}
-              <font color="blue">
+              <font color="blue" data-bs-toggle="tooltip" data-bs-placement="top" title="Utylizacja nie zostala sfinalizowana"> 
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-box" viewBox="0 0 16 16"><path d="M8.186 1.113a.5.5 0 0 0-.372 0L1.846 3.5 8 5.961 14.154 3.5zM15 4.239l-6.5 2.6v7.922l6.5-2.6V4.24zM7.5 14.762V6.838L1 4.239v7.923zM7.443.184a1.5 1.5 0 0 1 1.114 0l7.129 2.852A.5.5 0 0 1 16 3.5v8.662a1 1 0 0 1-.629.928l-7.185 2.874a.5.5 0 0 1-.372 0L.63 13.09a1 1 0 0 1-.63-.928V3.5a.5.5 0 0 1 .314-.464z"/></svg>
               </font>
             {% endif %}
