--- a/src/management_system/templates/management_system/single_utilization.html
+++ b/src/management_system/templates/management_system/single_utilization.html
@@ -86,6 +86,9 @@
                 <li class="list-group-item"><b>Firma utylizacyjna:</b> {{utilization.utilization_company}}</li>
                 <li class="list-group-item"><b>Data oddania do utylizacji:</b> {{utilization.company_transfer_date}}</li>
               {% endif %}
+              {% if utilization.utilization_protocol_scan %}
+                <a class="btn btn-success mb-1" href="{% url 'singleUtilizationScan' utilization.id %}" role="button" >PDF</a>
+              {% endif %}
             </ul>
           </div>
         </div>
