--- a/src/management_system/templates/management_system/employees.html
+++ b/src/management_system/templates/management_system/employees.html
@@ -4,6 +4,7 @@
 {% block content %}
 
 <h2>Pracownicy</h2>
+{% comment %} <a class="btn btn-primary mb-1" href="{% url 'newemployee' %}" role="button">Nowy pracownik</a> {% endcomment %}
 <hr />
 
 <form action="{% url 'employees' %}" method="get">
@@ -55,7 +56,7 @@
 
   
   <div class="card-footer text-end p-3">
-    <a class="btn btn-primary mb-1" href="{% url 'newemployee' %}" role="button">Nowy pracownik</a>
+    
   </div>
   <div class="container p-4">
     <div class="pagination justify-content-center">
