--- a/src/management_system/templates/management_system/employees.html
+++ b/src/management_system/templates/management_system/employees.html
@@ -41,9 +41,16 @@
           <h6 class="mb-0"><span class="badge bg-danger">{{employee.user_location|default_if_none:""}}</span></h6>
         </td>
         <td >
-            <a class="btn btn-success mb-1" href="{% url 'singleEmployee' employee.id %}" role="button">Wyświetl</a>
-            <a class="btn btn-info mb-1" href="{% url 'editEmployee' %}?id={{employee.id}}" role="button">Edycja</a>
-            <a class="btn btn-danger mb-1" href="{% url 'deleteEmployee' employee.id %}" role="button">Usuń</a>
+          <div class="btn-group">
+            <a class="btn btn-secondary" href="{% url 'singleEmployee' employee.id %}" role="button">Wyświetl</a>
+            <button type="button" class="btn btn-secondary dropdown-toggle dropdown-toggle-split" data-bs-toggle="dropdown" aria-expanded="false">
+              <span class="visually-hidden">Toggle Dropdown</span>
+            </button>
+            <ul class="dropdown-menu">
+              <li><a class="dropdown-item" href="{% url 'editEmployee' %}?id={{employee.id}}">Edycja</a></li>
+              <li><a class="dropdown-item" href="{% url 'deleteEmployee' employee.id %}">Usuń</a></li>
+            </ul>
+          </div>
           {% comment %} <a href="#!" data-mdb-toggle="tooltip" title="Remove"><i
               class="fas fa-trash-alt text-danger"></i></a> {% endcomment %}
         </td>
