--- a/src/management_system/templates/management_system/items.html
+++ b/src/management_system/templates/management_system/items.html
@@ -18,6 +18,7 @@
 <table class="table mb-0">
     <thead>
       <tr>
+        <th scope="col"></th>
         <th scope="col">Typ</th>
         <th scope="col">Producent</th>
         <th scope="col">Model</th>
@@ -26,13 +27,28 @@
         <th scope="col">KK</th>
         <th scope="col">Aktualny właściciel</th>
         <th scope="col"></th>
-        
       </tr>
     </thead>
     <tbody>
 
         {% for item in itemList %}
       <tr class="fw-normal">
+        <td>
+          <!-- TODO: Latin characters -->
+          {% if item.utilization_id %}
+            <font color="red" data-bs-toggle="tooltip" data-bs-placement="top" title="Przedmiot w utylizacji">
+              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-x-circle-fill" viewBox="0 0 16 16"><path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0M5.354 4.646a.5.5 0 1 0-.708.708L7.293 8l-2.647 2.646a.5.5 0 0 0 .708.708L8 8.707l2.646 2.647a.5.5 0 0 0 .708-.708L8.707 8l2.647-2.646a.5.5 0 0 0-.708-.708L8 7.293z"/></svg>
+            </font>
+          {% elif item.item_user %}
+            <font color="green" data-bs-toggle="tooltip" data-bs-placement="top" title="Przedmiot ma wlasciciela">
+              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-check2" viewBox="0 0 16 16"><path d="M13.854 3.646a.5.5 0 0 1 0 .708l-7 7a.5.5 0 0 1-.708 0l-3.5-3.5a.5.5 0 1 1 .708-.708L6.5 10.293l6.646-6.647a.5.5 0 0 1 .708 0"/></svg>
+            </font>
+          {% else %}
+            <font color="green" data-bs-toggle="tooltip" data-bs-placement="top" title="Przedmiot dostepny">
+              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-check2-all" viewBox="0 0 16 16"><path d="M12.354 4.354a.5.5 0 0 0-.708-.708L5 10.293 1.854 7.146a.5.5 0 1 0-.708.708l3.5 3.5a.5.5 0 0 0 .708 0zm-4.208 7-.896-.897.707-.707.543.543 6.646-6.647a.5.5 0 0 1 .708.708l-7 7a.5.5 0 0 1-.708 0"/><path d="m5.354 7.146.896.897-.707.707-.897-.896a.5.5 0 1 1 .708-.708"/></svg>
+            </font>
+          {% endif %}
+        </td>
         <td>
           <span>{{item.category}}</span>
         </td>
