--- a/src/management_system/templates/management_system/utilization.html
+++ b/src/management_system/templates/management_system/utilization.html
@@ -56,7 +56,14 @@
             
         
         </td>
-          <td><a class="btn btn-success mb-1" role="button" href="{% url 'singleUtilization' utilization.id %}">Wyswietl</a></td>
+          <td>
+            <a class="btn btn-success mb-1" role="button" href="{% url 'singleUtilization' utilization.id %}">Wyswietl</a>
+            {% if not utilization.company_transfer_date %}
+              <a class="btn btn-danger mb-1" role="button" href="{% url 'utilizationDelete' utilization.id %}">
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-x-lg" viewBox="0 0 16 16"><path d="M2.146 2.854a.5.5 0 1 1 .708-.708L8 7.293l5.146-5.147a.5.5 0 0 1 .708.708L8.707 8l5.147 5.146a.5.5 0 0 1-.708.708L8 8.707l-5.146 5.147a.5.5 0 0 1-.708-.708L7.293 8z"/></svg>
+              </a>
+            {% endif %}
+          </td>
         </tr>
       
       {%endfor%}  
